@@ -18,6 +18,7 @@
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+define('DEFAULT_ADMIN_USER', 'admin');
 define('CORE_ROOT', dirname(__FILE__).'/../frog');
 
 $config_file = '../config.php';
@@ -33,6 +34,11 @@ $PDO = false;
 // lets install this nice little CMS
 if ( ! defined('DEBUG') && isset($_POST['commit']) && (file_exists($config_file) && is_writable($config_file)))
 {
+    define('INSTALL_SEQUENCE', true);
+    $admin_name = DEFAULT_ADMIN_USER;
+    $admin_passwd = '5baa61e4c9b93f3f0682250b6cf8331b7ee68fd8';
+    $admin_passwd_precrypt = 'password';
+
     $_POST['config']['use_pdo'] = class_exists('PDO');
 
     // check if the PDO driver we need is installed
@@ -45,9 +51,22 @@ if ( ! defined('DEBUG') && isset($_POST['commit']) && (file_exists($config_file)
     $config_content = $config_tmpl->fetch();
     
     file_put_contents($config_file, $config_content);
-    $msg .= "<p>Config file successfully written!</p>\n";
+    $msg .= "<ul><li>Config file successfully written.</li>\n";
     
     include $config_file;
+
+    // setup admin name (default to 'admin')
+    if (isset($_POST['config']['admin_username'])) {
+        $admin_name = $_POST['config']['admin_username'];
+        $admin_name = trim($admin_name);
+
+        $admin_passwd_precrypt = '12'.dechex(rand(100000000, 4294967295)).'K';
+        $admin_passwd = sha1($admin_passwd_precrypt);
+
+        //echo '<p>name: '.$admin_name.'<br/>password: '.$admin_passwd_precrypt.'</p>';
+        //echo '<p>name: '.$admin_name.'<br/>password: '.$admin_passwd.'</p>';
+        //exit;
+    }
     
     if (USE_PDO)
     {
@@ -70,13 +89,16 @@ if ( ! defined('DEBUG') && isset($_POST['commit']) && (file_exists($config_file)
     
     if ($PDO)
     {
-        $msg .= '<p>Database connection successful</p>';
+        $msg .= '<li>Database connection successfull.</li>';
         
         include 'schema_'.$_POST['config']['db_driver'].'.php';
         include 'sql_data.php';
         
-        $msg .= '<p>Tables loaded successfully!</p><p>You can login with: <br /><br /><strong>login</strong>: admin<br /><strong>password</strong>: password<br /><br />
-        <strong>at</strong>: <a href="../admin/">login page</a></p>';
+        $msg .= '<li>Tables loaded successfully</li></ul><p>You can login with: <br /><br /><strong>login</strong>: '.$admin_name.'<br /><strong>password</strong>: '.$admin_passwd_precrypt.'<br /><br />
+
+        <strong>at</strong>: <a href="../admin/">login page</a></p>
+
+        <p>Please be aware: the password is generated by Frog, please use it to login to Frog and <strong>change your password</strong>!</p>';
     }
     else $error = 'Unable to connect to the database! Tables are not loaded!';
 }
@@ -184,6 +206,11 @@ if ( ! defined('DEBUG') && isset($_POST['commit']) && (file_exists($config_file)
       <td colspan="3"><h3>Other information</h3></td>
     </tr>
     <tr>
+      <td class="label"><label class="optional" for="config_admin_username">Administrator username</label></td>
+      <td class="field"><input class="textbox" id="config_admin_username" maxlength="40" name="config[admin_username]" size="40" type="text" value="<?php echo DEFAULT_ADMIN_USER; ?>" /></td>
+      <td class="help">Required. Allows you to specify a custom username for the administrator. Default: admin</td>
+    </tr>
+    <tr>
       <td class="label"><label class="optional" for="config_url_suffix">URL suffix</label></td>
       <td class="field"><input class="textbox" id="config_url_suffix" maxlength="40" name="config[url_suffix]" size="40" type="text" value=".html" /></td>
       <td class="help">Optional. Add a suffix to simulate static html files.</td>
@@ -203,7 +230,11 @@ if ( ! defined('DEBUG') && isset($_POST['commit']) && (file_exists($config_file)
     <p style="color: red;"><?php echo $error; ?></p>
     <p><a href="index.php">Click here and try again</a></p>
     <?php else: ?>
-    <p><strong>Frog CMS</strong> is installed, <b>you must delete the <em>install/</em> folder now!</b></p>
+        <p>
+            <strong>Frog CMS</strong> is installed, <b>you should now:</b><br />
+            1. delete the <em>install/</em> folder!<br />
+            2. remove all write permissions from the <em>config.php</em> file!
+        </p>
     <?php endif; ?>
 
 <?php endif; ?>
