@@ -9,6 +9,8 @@ Sigla:
 
 0.9.5 - released 2009-02-??
 
++ Added option to choose administrator name in install screen. - issue 149
++ Added function that generates administrator password during install routine. - issue 149
 + Added check to make sure config.php isn't writable.
 + Added inheritence to hasContent() function. - issue 142
 + Added icon to directories in file_manager plugin - issue 140
